objects/AccountAssignedRequirement__c.object
<CustomObject>
    <description>May 2013 Release. Related Account Partner Program and Program Requirement for that level.</description>
    <fields>
        <fullName>AccountAssignedFeature__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Assigned Feature</label>
        <referenceTo>AccountAssignedFeature__c</referenceTo>
        <relationshipLabel>Account Assigned Requirements</relationshipLabel>
        <relationshipName>AccountAssignedRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountAssignedProgram__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Assigned Program</label>
        <referenceTo>ACC_PartnerProgram__c</referenceTo>
        <relationshipLabel>Account Assigned Requirements</relationshipLabel>
        <relationshipName>AccountAssignedRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Related Parent Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Assigned Requirements</relationshipLabel>
        <relationshipName>AccountAssignedRequirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certification</label>
        <referenceTo>CertificationCatalog__c</referenceTo>
        <relationshipLabel>Account Assigned Requirements</relationshipLabel>
        <relationshipName>AccountAssignedRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FeatureRequirement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Feature Requirement</label>
        <referenceTo>FeatureRequirement__c</referenceTo>
        <relationshipLabel>Account Assigned Requirements</relationshipLabel>
        <relationshipName>AccountAssignedRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerProgram__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Program</label>
        <referenceTo>PartnerProgram__c</referenceTo>
        <relationshipLabel>Account Assigned Requirements</relationshipLabel>
        <relationshipName>AccountAssignedRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramLevel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program Level</label>
        <referenceTo>ProgramLevel__c</referenceTo>
        <relationshipLabel>Account Assigned Requirements</relationshipLabel>
        <relationshipName>AccountAssignedRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramRequirement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program Requirement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.PartnerProgram__c</field>
                <operation>equals</operation>
                <valueField>ProgramRequirement__c.PartnerProgram__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProgramRequirement__c</referenceTo>
        <relationshipLabel>Account Assigned Requirements</relationshipLabel>
        <relationshipName>AccountAssignedRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referredto__c</fullName>
        <formula>ProgramRequirement__r.RecordType.Name</formula>
        <label>Referred to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequirementCatalog__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Requirement Catalog</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>RequirementCatalog__c.Retired__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>RequirementCatalog__c</referenceTo>
        <relationshipLabel>Account Assigned Requirements</relationshipLabel>
        <relationshipName>AccountAssignedRequirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequirementName__c</fullName>
        <formula>IF( FeatureRequirement__c != null ,   FeatureRequirement__r.RequirementName__r.Name ,  ProgramRequirement__r.RequirementCatalog__r.Name  )</formula>
        <label>Requirement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequirementStatus__c</fullName>
        <label>Requirement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <default>true</default>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequirementType__c</fullName>
        <formula>IF( ProgramRequirement__c != null,
 TEXT(ProgramRequirement__r.RequirementCatalog__r.Category__c ),
 TEXT(FeatureRequirement__r.RequirementName__r.Category__c ))</formula>
        <label>Requirement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEID__c</fullName>
        <description>OCT 13 PRM: SE requirement catalog id</description>
        <formula>IF(NOT(ISBLANK(ProgramRequirement__c)),  ProgramRequirement__r.SEID__c ,  IF(NOT(ISBLANK( FeatureRequirement__c )), FeatureRequirement__r.RequirementName__r.SEID__c  , &apos;&apos;) )</formula>
        <label>SE ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Account Assigned Requirement</label>
    <nameField>
        <displayFormat>APR-{0000000}</displayFormat>
        <label>Account Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Assigned Requirements</pluralLabel>
    <recordTypes>
        <fullName>ActivityRequirement</fullName>
        <active>true</active>
        <description>Requirements tied to Activity Requirements</description>
        <label>Activity Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Certification_Requirement</fullName>
        <active>true</active>
        <description>Requirements tied to Certification Requirements</description>
        <label>Certification Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>TargetRequirement</fullName>
        <active>true</active>
        <description>Requirements tied to Target Requirements</description>
        <label>Target Requirement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>